--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -10,7 +10,7 @@
   --color-base-100: var(--color-stone-50);
   --color-base-200: var(--color-stone-100);
   --color-base-300: var(--color-stone-200);
-  --color-base-content: oklch(14% 0.004 49.25);
+  --color-base-content: var(--color-stone-950);
   --color-primary: oklch(54.769% 0.21991 21.327);
   --color-primary-content: oklch(93.217% 0.01023 81.705);
   --color-secondary: oklch(20.89% 0.02479 249.115);
